content_preferences, ui_settings, profile Patche routes.
Initialised default settings for those routs on register.
Added ui_settings and content_preferences to login response
