# MusicAPI/src/controller/AuthController.ts
@@ -5,6 +5,8 @@ import {
     IAuthRegistration
 } from "../model/AuthModel.js";
 import {generateToken} from "../auth.js";
+import {UserController} from "./UserController.js";
+import {UserService} from "../service/UserService.js";
 
 export class AuthController{
     static async init(app: Express){
@@ -24,31 +26,42 @@ export class AuthController{
         }
 
         const result = await AuthService.register_user(user);
+
         //Handling different Error messages and Status
-        if(result == "created"){
-            res.status(201).json({
-                "token": generateToken({username: user.username}),
-                "user": user
-            })
-        }
-        if(result == "username_conflict"){
-            res.status(409).json({
-                "message": "Username already taken",
-                "code": "USERNAME_TAKEN"
-            })
-        }
-        if(result == "email_conflict"){
-            res.status(409).json({
-                "message": "EMail is already in use by another account",
-                "code": "EMAIL_TAKEN"
-            })
-        }
-        if(result == "database error") {
-            res.status(400).json({
-                "message": "Database Error",
-                "code": "DATABASE_ERROR"
-            })
-        }
+            if(result == "created"){
+                await UserController.init_content_preferences(user.username);
+                await UserController.init_ui_settings(user.username);
+                await UserController.init_profile(user.username);
+
+
+                res.status(201).json({
+                    "token": generateToken({username: user.username}),
+                    "user": user
+                })
+
+            }
+            if(result == "username_conflict"){
+                res.status(409).json({
+                    "message": "Username already taken",
+                    "code": "USERNAME_TAKEN"
+                })
+                return;
+            }
+            if(result == "email_conflict"){
+                res.status(409).json({
+                    "message": "EMail is already in use by another account",
+                    "code": "EMAIL_TAKEN"
+                })
+                return;
+            }
+            if(result == "database error") {
+                res.status(400).json({
+                    "message": "Database Error",
+                    "code": "DATABASE_ERROR"
+                })
+                return;
+            }
+
     }
 
     static async login(req: Request, res: Response){
@@ -66,13 +79,18 @@ export class AuthController{
         const result = await AuthService.login_user(user);
         //Handling different Error messages and Status
         if(result.message == "confirmed"){
+            const ui_settings = await UserService.get_ui_settings(result.user_id as number);
+            const content_preferences = await UserService.get_content_preferences(result.user_id as number);
+
             res.status(201).json({
                 "token": generateToken({username: user.username}),
                 "user": {
                     username: result.username,
                     email: result.email,
                     user_id: result.user_id
-                }
+                },
+                "ui_settings": ui_settings,
+                "content_preferences": content_preferences
             })
         }
         if(result.message == "wrong_username_or_password"){
